# F1-Dash

./: .gitignore  ARCHITECTURE.md  README.md  render.yaml
backend/: .env.example  analyze_errors.py  compare_boosters.py  pyproject.toml  requirements.txt  train_model.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py
backend/app/api/schemas/: __init__.py  ingestion.py  lap.py  session.py  strategy.py  telemetry.py
backend/app/api/v1/: ingestion.py  laps.py  predictions.py  router.py  schedule.py  sessions.py  strategy.py  telemetry.py
backend/app/domain/: __init__.py
backend/app/domain/enums/: __init__.py  compound.py  session_type.py  track_status.py
backend/app/domain/models/: __init__.py  driver.py  lap.py  session.py  team.py  telemetry.py  tire.py  weather.py
backend/app/ingestion/: __init__.py  fetcher.py  transformers.py
backend/app/middleware/: __init__.py  security.py
backend/app/repositories/: __init__.py
backend/app/repositories/file/: __init__.py  base.py  driver_repo.py  lap_repo.py  session_repo.py  stint_repo.py  telemetry_repo.py
backend/app/repositories/interfaces/: __init__.py  base.py  (+5 more)
backend/app/services/: __init__.py  ingestion_service.py  lap_service.py  prediction_service.py  session_service.py  strategy_service.py  telemetry_service.py
backend/data/models/: features.joblib  race_predictor.joblib  scaler.joblib
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_domain_models.py  test_repositories.py  test_services.py
(+20 files in other folders)
